# keyboard-wpm-leaderboard

./: .gitignore  README.md
app/: Dockerfile  app.py  pyproject.toml
app/static/css/: index.css
app/templates/: header.html  leaderboards.html  submit.html
app/utils/: utils.py
caddy/: Caddyfile
terraform/: .terraform.lock.hcl  main.tf  main.tfvars  providers.tf
